@@ -156,6 +156,67 @@ void make_datasets(const Psana::OceanOptics::DataV2& obj, hdf5pp::Group group, c
 /// datsets are extended with zero-filled of default-initialized data.
 void store_at(const Psana::OceanOptics::DataV2* obj, hdf5pp::Group group, long index = -1, int version = -1);
 
+
+namespace ns_DataV3_v1 {
+struct dataset_data {
+  static hdf5pp::Type native_type();
+  static hdf5pp::Type stored_type();
+
+  dataset_data();
+  dataset_data(const Psana::OceanOptics::DataV3& psanaobj);
+  ~dataset_data();
+
+  uint64_t frameCounter;
+  uint64_t numDelayedFrames;
+  uint64_t numDiscardFrames;
+  OceanOptics::ns_timespec64_v0::dataset_data timeFrameStart;
+  OceanOptics::ns_timespec64_v0::dataset_data timeFrameFirstData;
+  OceanOptics::ns_timespec64_v0::dataset_data timeFrameEnd;
+  int8_t numSpectraInData;
+  int8_t numSpectraInQueue;
+  int8_t numSpectraUnused;
+  double durationOfFrame;
+
+
+};
+}
+
+
+template <typename Config>
+class DataV3_v1 : public Psana::OceanOptics::DataV3 {
+public:
+  typedef Psana::OceanOptics::DataV3 PsanaType;
+  DataV3_v1() {}
+  DataV3_v1(hdf5pp::Group group, hsize_t idx, const boost::shared_ptr<Config>& cfg)
+    : m_group(group), m_idx(idx), m_cfg(cfg) {}
+  virtual ~DataV3_v1() {}
+  virtual ndarray<const uint16_t, 1> data() const;
+  virtual uint64_t frameCounter() const;
+  virtual uint64_t numDelayedFrames() const;
+  virtual uint64_t numDiscardFrames() const;
+  virtual const Psana::OceanOptics::timespec64& timeFrameStart() const;
+  virtual const Psana::OceanOptics::timespec64& timeFrameFirstData() const;
+  virtual const Psana::OceanOptics::timespec64& timeFrameEnd() const;
+  virtual int8_t numSpectraInData() const;
+  virtual int8_t numSpectraInQueue() const;
+  virtual int8_t numSpectraUnused() const;
+  virtual double durationOfFrame() const;
+  virtual double nonlinerCorrected(uint32_t iPixel) const;
+private:
+  mutable hdf5pp::Group m_group;
+  hsize_t m_idx;
+  boost::shared_ptr<Config> m_cfg;
+  mutable boost::shared_ptr<OceanOptics::ns_DataV3_v1::dataset_data> m_ds_data;
+  void read_ds_data() const;
+  mutable Psana::OceanOptics::timespec64 m_ds_storage_data_timeFrameStart;
+  mutable Psana::OceanOptics::timespec64 m_ds_storage_data_timeFrameFirstData;
+  mutable Psana::OceanOptics::timespec64 m_ds_storage_data_timeFrameEnd;
+  mutable ndarray<const uint16_t, 1> m_ds_spectra;
+  void read_ds_spectra() const;
+  mutable ndarray<const double, 1> m_ds_corrSpectra;
+  void read_ds_corrSpectra() const;
+};
+
 boost::shared_ptr<PSEvt::Proxy<Psana::OceanOptics::DataV3> > make_DataV3(int version, hdf5pp::Group group, hsize_t idx, const boost::shared_ptr<Psana::OceanOptics::ConfigV2>& cfg);
 
 /// Store object as a single instance (scalar dataset) inside specified group.
