@@ -473,10 +473,218 @@ void store_at(const Psana::OceanOptics::DataV2* obj, hdf5pp::Group group, long i
   store_DataV2(obj, group, index, version, true);
 }
 
+
+hdf5pp::Type ns_DataV3_v1_dataset_data_stored_type()
+{
+  typedef ns_DataV3_v1::dataset_data DsType;
+  hdf5pp::CompoundType type = hdf5pp::CompoundType::compoundType<DsType>();
+  type.insert("frameCounter", offsetof(DsType, frameCounter), hdf5pp::TypeTraits<uint64_t>::stored_type());
+  type.insert("numDelayedFrames", offsetof(DsType, numDelayedFrames), hdf5pp::TypeTraits<uint64_t>::stored_type());
+  type.insert("numDiscardFrames", offsetof(DsType, numDiscardFrames), hdf5pp::TypeTraits<uint64_t>::stored_type());
+  type.insert("timeFrameStart", offsetof(DsType, timeFrameStart), hdf5pp::TypeTraits<OceanOptics::ns_timespec64_v0::dataset_data>::stored_type());
+  type.insert("timeFrameFirstData", offsetof(DsType, timeFrameFirstData), hdf5pp::TypeTraits<OceanOptics::ns_timespec64_v0::dataset_data>::stored_type());
+  type.insert("timeFrameEnd", offsetof(DsType, timeFrameEnd), hdf5pp::TypeTraits<OceanOptics::ns_timespec64_v0::dataset_data>::stored_type());
+  type.insert("numSpectraInData", offsetof(DsType, numSpectraInData), hdf5pp::TypeTraits<int8_t>::stored_type());
+  type.insert("numSpectraInQueue", offsetof(DsType, numSpectraInQueue), hdf5pp::TypeTraits<int8_t>::stored_type());
+  type.insert("numSpectraUnused", offsetof(DsType, numSpectraUnused), hdf5pp::TypeTraits<int8_t>::stored_type());
+  type.insert("durationOfFrame", offsetof(DsType, durationOfFrame), hdf5pp::TypeTraits<double>::stored_type());
+  return type;
+}
+
+hdf5pp::Type ns_DataV3_v1::dataset_data::stored_type()
+{
+  static hdf5pp::Type type = ns_DataV3_v1_dataset_data_stored_type();
+  return type;
+}
+
+hdf5pp::Type ns_DataV3_v1_dataset_data_native_type()
+{
+  typedef ns_DataV3_v1::dataset_data DsType;
+  hdf5pp::CompoundType type = hdf5pp::CompoundType::compoundType<DsType>();
+  type.insert("frameCounter", offsetof(DsType, frameCounter), hdf5pp::TypeTraits<uint64_t>::native_type());
+  type.insert("numDelayedFrames", offsetof(DsType, numDelayedFrames), hdf5pp::TypeTraits<uint64_t>::native_type());
+  type.insert("numDiscardFrames", offsetof(DsType, numDiscardFrames), hdf5pp::TypeTraits<uint64_t>::native_type());
+  type.insert("timeFrameStart", offsetof(DsType, timeFrameStart), hdf5pp::TypeTraits<OceanOptics::ns_timespec64_v0::dataset_data>::native_type());
+  type.insert("timeFrameFirstData", offsetof(DsType, timeFrameFirstData), hdf5pp::TypeTraits<OceanOptics::ns_timespec64_v0::dataset_data>::native_type());
+  type.insert("timeFrameEnd", offsetof(DsType, timeFrameEnd), hdf5pp::TypeTraits<OceanOptics::ns_timespec64_v0::dataset_data>::native_type());
+  type.insert("numSpectraInData", offsetof(DsType, numSpectraInData), hdf5pp::TypeTraits<int8_t>::native_type());
+  type.insert("numSpectraInQueue", offsetof(DsType, numSpectraInQueue), hdf5pp::TypeTraits<int8_t>::native_type());
+  type.insert("numSpectraUnused", offsetof(DsType, numSpectraUnused), hdf5pp::TypeTraits<int8_t>::native_type());
+  type.insert("durationOfFrame", offsetof(DsType, durationOfFrame), hdf5pp::TypeTraits<double>::native_type());
+  return type;
+}
+
+hdf5pp::Type ns_DataV3_v1::dataset_data::native_type()
+{
+  static hdf5pp::Type type = ns_DataV3_v1_dataset_data_native_type();
+  return type;
+}
+
+ns_DataV3_v1::dataset_data::dataset_data()
+{
+}
+
+ns_DataV3_v1::dataset_data::dataset_data(const Psana::OceanOptics::DataV3& psanaobj)
+  : frameCounter(psanaobj.frameCounter())
+  , numDelayedFrames(psanaobj.numDelayedFrames())
+  , numDiscardFrames(psanaobj.numDiscardFrames())
+  , timeFrameStart(psanaobj.timeFrameStart())
+  , timeFrameFirstData(psanaobj.timeFrameFirstData())
+  , timeFrameEnd(psanaobj.timeFrameEnd())
+  , numSpectraInData(psanaobj.numSpectraInData())
+  , numSpectraInQueue(psanaobj.numSpectraInQueue())
+  , numSpectraUnused(psanaobj.numSpectraUnused())
+  , durationOfFrame(psanaobj.durationOfFrame())
+{
+}
+
+ns_DataV3_v1::dataset_data::~dataset_data()
+{
+}
+template <typename Config>
+ndarray<const uint16_t, 1> DataV3_v1<Config>::data() const {
+  if (m_ds_spectra.empty()) read_ds_spectra();
+  return m_ds_spectra;
+}
+template <typename Config>
+uint64_t DataV3_v1<Config>::frameCounter() const {
+  if (not m_ds_data) read_ds_data();
+  return uint64_t(m_ds_data->frameCounter);
+}
+template <typename Config>
+uint64_t DataV3_v1<Config>::numDelayedFrames() const {
+  if (not m_ds_data) read_ds_data();
+  return uint64_t(m_ds_data->numDelayedFrames);
+}
+template <typename Config>
+uint64_t DataV3_v1<Config>::numDiscardFrames() const {
+  if (not m_ds_data) read_ds_data();
+  return uint64_t(m_ds_data->numDiscardFrames);
+}
+template <typename Config>
+const Psana::OceanOptics::timespec64& DataV3_v1<Config>::timeFrameStart() const {
+  if (not m_ds_data) read_ds_data();
+  m_ds_storage_data_timeFrameStart = Psana::OceanOptics::timespec64(m_ds_data->timeFrameStart);
+  return m_ds_storage_data_timeFrameStart;
+}
+template <typename Config>
+const Psana::OceanOptics::timespec64& DataV3_v1<Config>::timeFrameFirstData() const {
+  if (not m_ds_data) read_ds_data();
+  m_ds_storage_data_timeFrameFirstData = Psana::OceanOptics::timespec64(m_ds_data->timeFrameFirstData);
+  return m_ds_storage_data_timeFrameFirstData;
+}
+template <typename Config>
+const Psana::OceanOptics::timespec64& DataV3_v1<Config>::timeFrameEnd() const {
+  if (not m_ds_data) read_ds_data();
+  m_ds_storage_data_timeFrameEnd = Psana::OceanOptics::timespec64(m_ds_data->timeFrameEnd);
+  return m_ds_storage_data_timeFrameEnd;
+}
+template <typename Config>
+int8_t DataV3_v1<Config>::numSpectraInData() const {
+  if (not m_ds_data) read_ds_data();
+  return int8_t(m_ds_data->numSpectraInData);
+}
+template <typename Config>
+int8_t DataV3_v1<Config>::numSpectraInQueue() const {
+  if (not m_ds_data) read_ds_data();
+  return int8_t(m_ds_data->numSpectraInQueue);
+}
+template <typename Config>
+int8_t DataV3_v1<Config>::numSpectraUnused() const {
+  if (not m_ds_data) read_ds_data();
+  return int8_t(m_ds_data->numSpectraUnused);
+}
+template <typename Config>
+double DataV3_v1<Config>::durationOfFrame() const {
+  if (not m_ds_data) read_ds_data();
+  return double(m_ds_data->durationOfFrame);
+}
+template <typename Config>
+double DataV3_v1<Config>::nonlinerCorrected(uint32_t iPixel) const {
+  if (m_ds_corrSpectra.empty()) read_ds_corrSpectra();
+  return m_ds_corrSpectra[ iPixel ];
+}
+template <typename Config>
+void DataV3_v1<Config>::read_ds_data() const {
+  m_ds_data = hdf5pp::Utils::readGroup<OceanOptics::ns_DataV3_v1::dataset_data>(m_group, "data", m_idx);
+}
+template <typename Config>
+void DataV3_v1<Config>::read_ds_spectra() const {
+  m_ds_spectra = hdf5pp::Utils::readNdarray<uint16_t, 1>(m_group, "spectra", m_idx);
+}
+template <typename Config>
+void DataV3_v1<Config>::read_ds_corrSpectra() const {
+  m_ds_corrSpectra = hdf5pp::Utils::readNdarray<double, 1>(m_group, "corrSpectra", m_idx);
+}
+template class DataV3_v1<Psana::OceanOptics::ConfigV2>;
+
+void make_datasets_DataV3_v1(const Psana::OceanOptics::DataV3& obj, 
+      hdf5pp::Group group, const ChunkPolicy& chunkPolicy, int deflate, bool shuffle)
+{
+  {
+    hdf5pp::Type dstype = OceanOptics::ns_DataV3_v1::dataset_data::stored_type();
+    hdf5pp::Utils::createDataset(group, "data", dstype, chunkPolicy.chunkSize(dstype), chunkPolicy.chunkCacheSize(dstype), deflate, shuffle);    
+  }
+  {
+    typedef __typeof__(obj.data()) PsanaArray;
+    const PsanaArray& psana_array = obj.data();
+    hdf5pp::Type dstype = hdf5pp::ArrayType::arrayType(hdf5pp::TypeTraits<uint16_t>::stored_type(), psana_array.shape()[0]);
+    hdf5pp::Utils::createDataset(group, "spectra", dstype, chunkPolicy.chunkSize(dstype), chunkPolicy.chunkCacheSize(dstype), deflate, shuffle);    
+  }
+  {
+    hdf5pp::Type dstype = hdf5pp::ArrayType::arrayType(hdf5pp::TypeTraits<double>::stored_type(), Psana::OceanOptics::DataV3::iNumPixels);
+    hdf5pp::Utils::createDataset(group, "corrSpectra", dstype, chunkPolicy.chunkSize(dstype), chunkPolicy.chunkCacheSize(dstype), deflate, shuffle);    
+  }
+}
+
+void store_DataV3_v1(const Psana::OceanOptics::DataV3* obj, hdf5pp::Group group, long index, bool append)
+{
+  if (obj) {
+    OceanOptics::ns_DataV3_v1::dataset_data ds_data(*obj);
+    if (append) {
+      hdf5pp::Utils::storeAt(group, "data", ds_data, index);
+    } else {
+      hdf5pp::Utils::storeScalar(group, "data", ds_data);
+    }
+  } else if (append) {
+    hdf5pp::Utils::resizeDataset(group, "data", index < 0 ? index : index + 1);
+  }
+  if (append) {
+    if (obj) {
+      hdf5pp::Utils::storeNDArrayAt(group, "spectra", obj->data(), index);
+    } else {
+      hdf5pp::Utils::resizeDataset(group, "spectra", index < 0 ? index : index + 1);
+    }
+  } else {
+    hdf5pp::Utils::storeNDArray(group, "spectra", obj->data());
+  }
+
+  if (append) {
+    if (obj) {
+      ndarray<double, 1> corrSpectra_method_domain = make_ndarray<double>(Psana::OceanOptics::DataV3::iNumPixels);
+      for (uint32_t methodArg = 0; methodArg < Psana::OceanOptics::DataV3::iNumPixels; ++methodArg) {
+        corrSpectra_method_domain[methodArg] = obj->nonlinerCorrected(methodArg);
+      }
+      hdf5pp::Utils::storeNDArrayAt(group, "corrSpectra", corrSpectra_method_domain, index);
+    } else {
+      hdf5pp::Utils::resizeDataset(group, "corrSpectra", index < 0 ? index : index + 1);
+    }
+  } else {
+    ndarray<double, 1> corrSpectra_method_domain = make_ndarray<double>(Psana::OceanOptics::DataV3::iNumPixels);
+    for (uint32_t methodArg = 0; methodArg < Psana::OceanOptics::DataV3::iNumPixels; ++methodArg) {
+      corrSpectra_method_domain[methodArg] = obj->nonlinerCorrected(methodArg);
+    }
+    hdf5pp::Utils::storeNDArray(group, "corrSpectra", corrSpectra_method_domain);
+  }
+
+}
+
 boost::shared_ptr<PSEvt::Proxy<Psana::OceanOptics::DataV3> > make_DataV3(int version, hdf5pp::Group group, hsize_t idx, const boost::shared_ptr<Psana::OceanOptics::ConfigV2>& cfg) {
   switch (version) {
   case 0:
     return boost::make_shared<PSEvt::DataProxy<Psana::OceanOptics::DataV3> >(boost::make_shared<DataV3_v0<Psana::OceanOptics::ConfigV2> >(group, idx, cfg));
+  case 1:
+    return boost::make_shared<PSEvt::DataProxy<Psana::OceanOptics::DataV3> >(boost::make_shared<DataV3_v1<Psana::OceanOptics::ConfigV2> >(group, idx, cfg));
   default:
     return boost::make_shared<PSEvt::DataProxy<Psana::OceanOptics::DataV3> >(boost::shared_ptr<Psana::OceanOptics::DataV3>());
   }
@@ -485,11 +693,14 @@ boost::shared_ptr<PSEvt::Proxy<Psana::OceanOptics::DataV3> > make_DataV3(int ver
 void make_datasets(const Psana::OceanOptics::DataV3& obj, hdf5pp::Group group, const ChunkPolicy& chunkPolicy,
                    int deflate, bool shuffle, int version)
 {
-  if (version < 0) version = 0;
+  if (version < 0) version = 1;
   group.createAttr<uint32_t>("_schemaVersion").store(version);
   switch (version) {
   case 0:
     make_datasets_DataV3_v0(obj, group, chunkPolicy, deflate, shuffle);
+    break;
+  case 1:
+    make_datasets_DataV3_v1(obj, group, chunkPolicy, deflate, shuffle);
     break;
   default:
     throw ExceptionSchemaVersion(ERR_LOC, "OceanOptics.DataV3", version);
@@ -498,11 +709,14 @@ void make_datasets(const Psana::OceanOptics::DataV3& obj, hdf5pp::Group group, c
 
 void store_DataV3(const Psana::OceanOptics::DataV3* obj, hdf5pp::Group group, long index, int version, bool append)
 {
-  if (version < 0) version = 0;
+  if (version < 0) version = 1;
   if (not append) group.createAttr<uint32_t>("_schemaVersion").store(version);
   switch (version) {
   case 0:
     store_DataV3_v0(obj, group, index, append);
+    break;
+  case 1:
+    store_DataV3_v1(obj, group, index, append);
     break;
   default:
     throw ExceptionSchemaVersion(ERR_LOC, "OceanOptics.DataV3", version);
